@@ -263,6 +263,8 @@ union TestUnion switch (short)
 // Test for various kinds of declarations inside a union,
 // similar to the example in enum_in_struct.idl.
 
+typedef long NamedLongArray[10];
+
 union decl_heavy_union switch (short)
 {
   case 1:
@@ -291,5 +293,11 @@ union decl_heavy_union switch (short)
       case 1: long a;
       case 2: char b;
     } m_un_arr[10];
+  // The following caused compile problems once
+  // when generating ostream ops
+  case 5:
+    NamedLongArray m_named_long_array;
+  case 6:
+    long m_anon_long_array[10];
 };
 
